# PEA

./: .dockerignore  .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  ROADMAP.md  docker-compose.yml  open-archiver.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  update-local.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-deployment.yml  release.yml
apps/desktop/: package.json
apps/desktop/splash/: index.html
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/open-archiver/: Dockerfile  index.ts  package.json
crates/engine/: Cargo.toml
crates/engine/migrations/: 0000_fair_trish_tilby.sql  0002_attachment_metadata.sql  0003_perf_and_reclaim.sql  0004_drop_dead_columns.sql  0005_remove_user.sql  0006_rename_credentials.sql  0007_rename_sync_vestiges.sql  0008_likely_duplicates_live.sql  0009_exact_duplicate_ignores.sql  0010_email_trash.sql  0011_drop_likely_group_key.sql  0012_rename_user_email_to_import_source.sql  0013_dedupe_email_attachments.sql  0014_import_progress.sql  0015_sent_at_kind.sql
crates/engine/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
crates/engine/src/: api.rs  connectors.rs  crypto.rs  duplicates.rs  emails.rs  eml.rs  handlers.rs  ingest.rs  lib.rs  main.rs  preview.rs  processors.rs  provision.rs  queue.rs  readers.rs  remote_content.rs  search.rs  sessions.rs  sources.rs  state.rs  writes.rs
crates/engine/tests/: api_handlers.rs  bug_regressions.rs  crud_behavior.rs  deep_coverage.rs  handler_coverage.rs  harness_check.rs  import_smoke.rs  runtime_coverage.rs  search_behavior.rs
crates/engine/tests/common/: mod.rs
docker/: docker-entrypoint.sh
docs/: SUMMARY.md  index.md
docs/.vitepress/: config.mts
docs/api/: api-keys.md  archived-email.md  dashboard.md  index.md  jobs.md  openapi.json  search.md  settings.md  storage.md  users.md
docs/enterprise/retention-labels/: automated-tagging.md  guide.md
docs/user-guides/: installation.md
docs/user-guides/email-providers/: eml.md  index.md  mbox.md  merging-sources.md
packaging/arch/: PKGBUILD
scripts/: build-desktop-bundle.mjs  install-desktop.sh  local-up.mjs  perf-baseline.mjs  set-version.mjs  setup-local-env.mjs
scripts/fixtures/: remote.mbox  sample.mbox
