[package]
name = "pea-engine"
version = "0.8.0"
edition = "2021"
description = "PEA (Personal Email Archive) engine — API, job queue, ingestion, and search in one library"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs"] }
croner = "2"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
aes = "0.8"
cbc = { version = "0.1", features = ["std", "alloc"] }
aes-gcm = "0.10"
scrypt = "0.11"
hex = "0.4"
mail-parser = "0.9"
mail-builder = "0.3"
ammonia = "4"
regex = "1"
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
pdf-extract = "0.7"
calamine = "0.26"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
include_dir = "0.7"
indexmap = "2"

[lib]
name = "pea_engine"
path = "src/lib.rs"

[[bin]]
name = "pea-engine"
path = "src/main.rs"
