[package]
name = "pea-engine"
version = "1.2.4"
edition = "2021"
description = "PEA (Personal Email Archive) engine — API, job queue, ingestion, and search in one library"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde_json = { version = "1", features = ["preserve_order"] }
mail-parser = "0.9"
ammonia = "4"
regex = "1"
url = "2"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
pdf-extract = "0.12"
calamine = "0.35"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
include_dir = "0.7"

[dev-dependencies]
# `oneshot` drives the axum Router directly in handler tests — no socket needed.
tower = { version = "0.5", features = ["util"] }
# read back the attachments-archive zip in handler tests
zip = { version = "2", default-features = false, features = ["deflate"] }

[lib]
name = "pea_engine"
path = "src/lib.rs"

[[bin]]
name = "pea-engine"
path = "src/main.rs"
