[package]
name = "pea-desktop"
version = "0.8.0"
description = "PEA (Personal Email Archive) desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
pea-engine = { path = "../../../crates/engine" }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http = "1"
