[package]
name = "pea-desktop"
version = "1.2.5"
description = "PEA (Personal Email Archive) desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
# xdg-portal instead of the default in-process gtk3 dialog: on wlroots
# compositors (Hyprland/Omarchy) the gtk3 dialog's buttons can go unresponsive;
# the portal delegates to the system's file chooser service instead.
tauri-plugin-dialog = { version = "2", default-features = false, features = ["xdg-portal"] }
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
serde_json = "1"
pea-engine = { path = "../../../crates/engine" }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http = "1"

# Native Quick Look: the shared QLPreviewPanel (the same panel Finder shows on
# Space) is an AppKit API, reachable only via Objective-C from the app process.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-quick-look-ui = "0.3"
